// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Page /> Should render A4 blank portrait page by default 1`] = `
"%PDF-1.7
%����
1 0 obj
<<
/Type /Font
/Subtype /Type1
/Name /F1
/BaseFont /Helvetica
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 6 0 R
>>
endobj
6 0 obj
<<
/Type /Pages
/Kids [3 0 R]
/Count 1
>>
endobj
3 0 obj
<<
/Type /Page
/Parent 6 0 R
/Contents [7 0 R 5 0 R ]
/Resources 4 0 R
/MediaBox [0 0 595 842]
>>
endobj
7 0 obj
<<
/Length 16
>>
stream
/DeviceRGB cs



endstream
endobj
5 0 obj
<<
/Length 17
>>
stream
1 0 0 -1 0 842 cm
endstream
endobj
4 0 obj
<<
/ProcSet [/PDF/Text]
/Font <</F1 1 0 R>>
>>
endobj
xref
0 6
0000000000 65535 f
0000000015 00000 n
0000000095 00000 n
0000000201 00000 n
0000000314 00000 n
0000000144 00000 n
trailer
<<
/Size 5
/Root 2 0 R
>>
startxref
376
%%EOF"
`;

exports[`<Page /> Should render given background color 1`] = `
"%PDF-1.7
%����
15 0 obj
<<
/Type /Font
/Subtype /Type1
/Name /F1
/BaseFont /Helvetica
>>
endobj
16 0 obj
<<
/Type /Catalog
/Pages 20 0 R
>>
endobj
20 0 obj
<<
/Type /Pages
/Kids [17 0 R]
/Count 1
>>
endobj
17 0 obj
<<
/Type /Page
/Parent 20 0 R
/Contents [21 0 R 19 0 R ]
/Resources 18 0 R
/MediaBox [0 0 595 842]
>>
endobj
21 0 obj
<<
/Length 75
>>
stream
/DeviceRGB cs
1 0.38823529411764707 0.2784313725490196 scn
0 0 595 842 re
f
endstream
endobj
19 0 obj
<<
/Length 17
>>
stream
1 0 0 -1 0 842 cm
endstream
endobj
18 0 obj
<<
/ProcSet [/PDF/Text]
/Font <</F1 15 0 R>>
>>
endobj
xref
0 6
0000000000 65535 f
0000000015 00000 n
0000000096 00000 n
0000000206 00000 n
0000000324 00000 n
0000000147 00000 n
trailer
<<
/Size 5
/Root 16 0 R
>>
startxref
388
%%EOF"
`;

exports[`<Page /> Should render given size 1`] = `
"%PDF-1.7
%����
8 0 obj
<<
/Type /Font
/Subtype /Type1
/Name /F1
/BaseFont /Helvetica
>>
endobj
9 0 obj
<<
/Type /Catalog
/Pages 13 0 R
>>
endobj
13 0 obj
<<
/Type /Pages
/Kids [10 0 R]
/Count 1
>>
endobj
10 0 obj
<<
/Type /Page
/Parent 13 0 R
/Contents [14 0 R 12 0 R ]
/Resources 11 0 R
/MediaBox [0 0 2384 3370]
>>
endobj
14 0 obj
<<
/Length 16
>>
stream
/DeviceRGB cs



endstream
endobj
12 0 obj
<<
/Length 18
>>
stream
1 0 0 -1 0 3370 cm
endstream
endobj
11 0 obj
<<
/ProcSet [/PDF/Text]
/Font <</F1 8 0 R>>
>>
endobj
xref
0 6
0000000000 65535 f
0000000015 00000 n
0000000095 00000 n
0000000204 00000 n
0000000324 00000 n
0000000145 00000 n
trailer
<<
/Size 5
/Root 9 0 R
>>
startxref
387
%%EOF"
`;

exports[`<Page /> Should render landscape page 1`] = `
"%PDF-1.7
%����
22 0 obj
<<
/Type /Font
/Subtype /Type1
/Name /F1
/BaseFont /Helvetica
>>
endobj
23 0 obj
<<
/Type /Catalog
/Pages 27 0 R
>>
endobj
27 0 obj
<<
/Type /Pages
/Kids [24 0 R]
/Count 1
>>
endobj
24 0 obj
<<
/Type /Page
/Parent 27 0 R
/Contents [28 0 R 26 0 R ]
/Resources 25 0 R
/MediaBox [0 0 842 595]
>>
endobj
28 0 obj
<<
/Length 16
>>
stream
/DeviceRGB cs



endstream
endobj
26 0 obj
<<
/Length 17
>>
stream
1 0 0 -1 0 595 cm
endstream
endobj
25 0 obj
<<
/ProcSet [/PDF/Text]
/Font <</F1 22 0 R>>
>>
endobj
xref
0 6
0000000000 65535 f
0000000015 00000 n
0000000096 00000 n
0000000206 00000 n
0000000324 00000 n
0000000147 00000 n
trailer
<<
/Size 5
/Root 23 0 R
>>
startxref
388
%%EOF"
`;
